# mony

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOY_STEP_BY_STEP.md  GITHUB_SETUP.md  NEXT_STEPS.md  PROJECT_COMPLETION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  STORY_1.2_SUMMARY.md  core-config.yaml  docker-compose.yml  package-lock.json  package.json  render.yaml  run_e2e_tests.sh  tsconfig.json  turbo.json  vercel.json
.claude/: CLAUDE.md  SESSIONS.md  settings.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  build.sh  main.py  migrate.py  pyproject.toml  requirements.txt  run_test_server.py  seed_test_data.py  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260429_0001_baseline_pre_2_2.py  20260429_0002_cleanup_openfinance_legacy.py  20260429_0003_add_transaction_sync_fields.py  20260515_0004_add_budgets_table.py
apps/api/data/: sandbox_institutions.json
apps/api/database/: README.md  __init__.py  base.py  models.py
apps/api/routes/: accounts.py  auth.py  budgets.py  goals.py  insights.py  open_finance.py  open_finance_sync.py  reports.py  transactions.py
apps/api/services/: __init__.py  open_finance_sync.py
apps/api/tests/: conftest.py  test_auth.py  test_budgets.py  test_goals.py  test_insights.py  test_open_finance.py  test_open_finance_sync.py  test_reports.py  test_reports_daterange.py  test_transactions.py
apps/api/utils/: auth.py  encryption.py
apps/api/workers/: __init__.py  celery_app.py
apps/api/workers/tasks/: __init__.py  sync_tasks.py
docs/: API.md  ARCHITECTURE.md  (+3 more)
(+118 files in other folders)
